# Rusty_Claw

./: .dockerignore  .gitignore  COMPARISON.md  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  ROADMAP.md  WHITEPAPER.md  docker-compose.yml
.github/workflows/: ci.yml
crates/rusty-claw-agent/: Cargo.toml
crates/rusty-claw-agent/src/: compaction.rs  lib.rs  prompt.rs  runtime.rs  transcript.rs
crates/rusty-claw-browser/: Cargo.toml
crates/rusty-claw-browser/src/: config.rs  lib.rs  pool.rs
crates/rusty-claw-canvas/: Cargo.toml
crates/rusty-claw-canvas/src/: lib.rs  protocol.rs  session.rs
crates/rusty-claw-channels/: Cargo.toml
crates/rusty-claw-channels/src/: bluebubbles.rs  discord.rs  googlechat.rs  lib.rs  matrix.rs  msteams.rs  signal.rs  slack.rs  telegram.rs  webchat.rs  whatsapp.rs
crates/rusty-claw-cli/: Cargo.toml
crates/rusty-claw-cli/src/: main.rs
crates/rusty-claw-core/: Cargo.toml
crates/rusty-claw-core/src/: config.rs  error.rs  lib.rs  pairing.rs  protocol.rs  session.rs  session_store.rs  skills.rs  types.rs
crates/rusty-claw-gateway/: Cargo.toml
crates/rusty-claw-gateway/src/: canvas.rs  channel_router.rs  connection.rs  cron.rs  events.rs  hot_reload.rs  lib.rs  methods.rs  metrics.rs  nodes.rs  rate_limit.rs  server.rs  skills.rs  state.rs  tailscale.rs
crates/rusty-claw-gateway/tests/: integration.rs
crates/rusty-claw-media/: Cargo.toml
crates/rusty-claw-media/src/: lib.rs  stt.rs  tts_stream.rs  vad.rs  voice_session.rs
crates/rusty-claw-plugins/: Cargo.toml
crates/rusty-claw-plugins/src/: api.rs  hooks.rs  lib.rs  logging_plugin.rs  manager.rs  wasm_adapter.rs  wasm_runtime.rs
crates/rusty-claw-providers/: Cargo.toml
crates/rusty-claw-providers/src/: anthropic.rs  failover.rs  google.rs  lib.rs  openai.rs  sse.rs
crates/rusty-claw-providers/tests/: integration.rs
crates/rusty-claw-tools/: Cargo.toml
crates/rusty-claw-tools/src/: agents_spawn.rs  browser.rs  canvas.rs  edit_file.rs  exec.rs  file_list.rs  image_generation.rs  lib.rs  memory.rs  path_guard.rs  read_file.rs  sessions.rs  transcription.rs  tts.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/rusty-claw-tts/: Cargo.toml
crates/rusty-claw-tts/src/: lib.rs
crates/rusty-claw-web/: Cargo.toml
crates/rusty-claw-web/src/: lib.rs
crates/rusty-claw-web/ui/: index.html
crates/rusty-claw-web/ui/css/: app.css
crates/rusty-claw-web/ui/js/: app.js  gateway.js  router.js  utils.js
crates/rusty-claw-web/ui/js/pages/: channels.js  chat.js  config.js  dashboard.js  sessions.js
scripts/: measure.sh
