[package]
name = "rusty-claw-channels"
description = "Channel abstraction and built-in channel implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["telegram", "discord", "webchat"]
telegram = ["teloxide"]
discord = ["serenity"]
slack = []
whatsapp = []
signal = []
imessage = []
googlechat = []
msteams = []
matrix = []
webchat = []
line = []
bluebubbles = []

[dependencies]
rusty-claw-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
futures.workspace = true

# Channel-specific deps (optional)
teloxide = { version = "0.13", optional = true, features = ["macros"] }
serenity = { version = "0.12", optional = true, features = ["client", "gateway", "model"] }
