[package]
name = "rusty-claw-channels"
description = "Channel abstraction and built-in channel implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["telegram", "discord", "webchat", "slack", "whatsapp", "signal", "googlechat", "msteams", "matrix", "bluebubbles"]
telegram = ["teloxide"]
discord = []
slack = ["hmac", "hex"]
whatsapp = ["hmac", "hex"]
signal = []
googlechat = []
msteams = []
matrix = []
webchat = []
bluebubbles = []

[dependencies]
rusty-claw-core.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
futures.workspace = true
axum.workspace = true
uuid.workspace = true
urlencoding = "2"

# Channel-specific deps (optional)
teloxide = { version = "0.13", optional = true, features = ["macros"] }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
sha2.workspace = true
