[package]
name = "rusty-claw-cli"
description = "CLI entry point for Rusty Claw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rusty-claw"
path = "src/main.rs"

[dependencies]
rusty-claw-core.workspace = true
rusty-claw-gateway.workspace = true
rusty-claw-agent.workspace = true
rusty-claw-channels.workspace = true
rusty-claw-providers.workspace = true
rusty-claw-tools.workspace = true
rusty-claw-plugins.workspace = true

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
reqwest.workspace = true
