[package]
name = "rusty-claw-core"
description = "Shared types, config, errors, and session model for Rusty Claw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
notify.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
dirs = "6"
shellexpand = "3"
