[package]
name = "rusty-claw-gateway"
description = "WebSocket gateway server implementing OpenClaw protocol v3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
rusty-claw-agent.workspace = true
rusty-claw-channels.workspace = true
rusty-claw-plugins.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
rand.workspace = true
sha2.workspace = true
