[package]
name = "rusty-claw-gateway"
description = "WebSocket gateway server implementing OpenClaw protocol v3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
rusty-claw-agent.workspace = true
rusty-claw-channels.workspace = true
rusty-claw-providers.workspace = true
rusty-claw-tools.workspace = true
rusty-claw-plugins.workspace = true
rusty-claw-web.workspace = true
rusty-claw-browser.workspace = true
rusty-claw-canvas.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
rand.workspace = true
sha2.workspace = true
notify.workspace = true
croner.workspace = true
serde_yaml.workspace = true

[features]
tls = ["axum-server"]

[dependencies.axum-server]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
