[package]
name = "rusty-claw-media"
description = "Media pipeline (images, audio, video processing)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
