[package]
name = "rusty-claw-media"
description = "Media pipeline (audio processing, VAD, STT, TTS streaming)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
