[package]
name = "rusty-claw-tools"
description = "Built-in tool implementations (exec, filesystem, web, memory, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
rusty-claw-browser.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
base64.workspace = true
uuid.workspace = true
url = "2"
shell-escape = "0.1"

[dev-dependencies]
tempfile = "3"
