[package]
name = "rusty-claw-tts"
description = "Text-to-speech integration (ElevenLabs, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
