[package]
name = "rusty-claw-web"
description = "Control UI and WebChat (embedded static assets)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rusty-claw-core.workspace = true
axum.workspace = true
tower-http.workspace = true
